[Core] Make the file manager and file picker searchable (see contao/core#7196).

--- a/core-bundle/src/Resources/contao/themes/flexible/src/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/main.css
@@ -408,6 +408,8 @@ input[type=search]::-webkit-search-decoration {
 #search .tl_text {
 	width:160px;
 	padding:3px 2px;
+	-webkit-appearance:textfield;
+	box-sizing:content-box;
 }
 .mac #search .tl_text {
 	padding:4px 2px;
