--- a/installation-bundle/src/Resources/views/main.html.twig
+++ b/installation-bundle/src/Resources/views/main.html.twig
@@ -76,57 +76,59 @@
       </form>
     </div>
   </fieldset>
-  <fieldset class="tl_box{% if has_admin %} collapsed{% endif %}">
-    <legend onclick="this.getParent().toggleClass('collapsed')">{{ 'admin_create'|trans }}</legend>
-    <div>
-      <h3>{{ 'admin_create'|trans }}</h3>
-      {% if admin_error %}
-        <p class="tl_error">{{ admin_error }}</p>
-      {% elseif has_admin %}
-        <p class="tl_confirm">{{ 'admin_confirm'|trans }}</p>
-      {% endif %}
-      <p>{{ 'admin_create_explain'|trans }}</p>
-      {% if not has_admin %}
-        <form method="post">
-          <div class="tl_formbody">
-            <input type="hidden" name="FORM_SUBMIT" value="tl_admin">
-            <h4><label for="username">{{ 'admin_username'|trans }}</label></h4>
-            {% if admin_username_error %}
-              <p class="tl_error">{{ admin_username_error }}</p>
-            {% endif %}
-            <input type="text" name="username" id="username" class="tl_text" value="{{ admin_username_value }}">
-            <h4><label for="name">{{ 'admin_name'|trans }}</label></h4>
-            <input type="text" name="name" id="name" class="tl_text" value="{{ admin_name_value }}">
-            <h4><label for="email">{{ 'admin_email'|trans }}</label></h4>
-            {% if admin_email_error %}
-              <p class="tl_error">{{ admin_email_error }}</p>
-            {% endif %}
-            <input type="email" name="email" id="email" class="tl_text" value="{{ admin_email_value }}">
-            <h4><label for="password">{{ 'password'|trans }}</label></h4>
-            {% if admin_password_error %}
-              <p class="tl_error">{{ admin_password_error }}</p>
-            {% endif %}
-            <input type="password" name="password" id="password" class="tl_text" value="">
-            <h4><label for="confirmation">{{ 'confirmation'|trans }}</label></h4>
-            <input type="password" name="confirmation" id="confirmation" class="tl_text" value="">
-          </div>
-          <div class="tl_formbody_submit">
-            <div class="tl_submit_container">
-              <button type="submit" class="tl_submit">{{ 'admin_save'|trans }}</button>
-            </div>
-          </div>
-        </form>
-      {% endif %}
-    </div>
-  </fieldset>
-  {% if has_admin %}
-    <fieldset class="tl_box last">
-      <legend onclick="this.getParent().toggleClass('collapsed')">{{ 'installation_complete'|trans }}</legend>
+  {% if not hide_admin %}
+    <fieldset class="tl_box{% if has_admin %} collapsed{% endif %}">
+      <legend onclick="this.getParent().toggleClass('collapsed')">{{ 'admin_create'|trans }}</legend>
       <div>
-        <h3>{{ 'congratulations'|trans }}</h3>
-        <p class="tl_confirm">{{ 'congratulations_explain'|trans }}</p>
-        <p>{{ 'installation_complete_explain'|trans }}</p>
+        <h3>{{ 'admin_create'|trans }}</h3>
+        {% if admin_error %}
+          <p class="tl_error">{{ admin_error }}</p>
+        {% elseif has_admin %}
+          <p class="tl_confirm">{{ 'admin_confirm'|trans }}</p>
+        {% endif %}
+        <p>{{ 'admin_create_explain'|trans }}</p>
+        {% if not has_admin %}
+          <form method="post">
+            <div class="tl_formbody">
+              <input type="hidden" name="FORM_SUBMIT" value="tl_admin">
+              <h4><label for="username">{{ 'admin_username'|trans }}</label></h4>
+              {% if admin_username_error %}
+                <p class="tl_error">{{ admin_username_error }}</p>
+              {% endif %}
+              <input type="text" name="username" id="username" class="tl_text" value="{{ admin_username_value }}">
+              <h4><label for="name">{{ 'admin_name'|trans }}</label></h4>
+              <input type="text" name="name" id="name" class="tl_text" value="{{ admin_name_value }}">
+              <h4><label for="email">{{ 'admin_email'|trans }}</label></h4>
+              {% if admin_email_error %}
+                <p class="tl_error">{{ admin_email_error }}</p>
+              {% endif %}
+              <input type="email" name="email" id="email" class="tl_text" value="{{ admin_email_value }}">
+              <h4><label for="password">{{ 'password'|trans }}</label></h4>
+              {% if admin_password_error %}
+                <p class="tl_error">{{ admin_password_error }}</p>
+              {% endif %}
+              <input type="password" name="password" id="password" class="tl_text" value="">
+              <h4><label for="confirmation">{{ 'confirmation'|trans }}</label></h4>
+              <input type="password" name="confirmation" id="confirmation" class="tl_text" value="">
+            </div>
+            <div class="tl_formbody_submit">
+              <div class="tl_submit_container">
+                <button type="submit" class="tl_submit">{{ 'admin_save'|trans }}</button>
+              </div>
+            </div>
+          </form>
+        {% endif %}
       </div>
     </fieldset>
+    {% if has_admin %}
+      <fieldset class="tl_box last">
+        <legend onclick="this.getParent().toggleClass('collapsed')">{{ 'installation_complete'|trans }}</legend>
+        <div>
+          <h3>{{ 'congratulations'|trans }}</h3>
+          <p class="tl_confirm">{{ 'congratulations_explain'|trans }}</p>
+          <p>{{ 'installation_complete_explain'|trans }}</p>
+        </div>
+      </fieldset>
+    {% endif %}
   {% endif %}
 {% endblock %}
