[Installation] Boot the real system as soon as the parameters.yml file exists.

--- a/installation-bundle/src/Resources/views/license.html.twig
+++ b/installation-bundle/src/Resources/views/license.html.twig
@@ -1,4 +1,4 @@
-{% extends "layout.html.twig" %}
+{% extends "@ContaoInstallation/layout.html.twig" %}
 
 {% block main %}
   <fieldset class="tl_tbox nolegend">
@@ -790,8 +790,7 @@ General Public License ever published by the Free Software Foundation.
 whether future versions of the GNU Lesser General Public License shall
 apply, that proxy's public statement of acceptance of any version is
 permanent authorization for you to choose that version for the
-Library.
-      </pre>
+Library.</pre>
     </div>
     <form class="tl_install_form" method="post">
       <div class="tl_formbody_submit">
