--- a/installation-bundle/src/Resources/views/main.html.twig
+++ b/installation-bundle/src/Resources/views/main.html.twig
@@ -1,4 +1,4 @@
-{% extends "layout.html.twig" %}
+{% extends "@ContaoInstallation/layout.html.twig" %}
 
 {% block main %}
   <fieldset class="tl_tbox{% if sql_form is empty %} collapsed{% endif %}">
