--- a/installation-bundle/src/Resources/views/password.html.twig
+++ b/installation-bundle/src/Resources/views/password.html.twig
@@ -10,6 +10,7 @@
     <form method="post">
       <div class="tl_formbody">
         <input type="hidden" name="FORM_SUBMIT" value="tl_password">
+        <input type="hidden" name="REQUEST_TOKEN" value="{{ request_token }}">
         <h4><label for="password">{{ 'password'|trans }}</label></h4>
         <input type="password" name="password" id="password" autocomplete="off" class="tl_text" value="">
         <h4><label for="confirmation">{{ 'confirmation'|trans }}</label></h4>
