--- a/installation-bundle/src/Resources/views/login.html.twig
+++ b/installation-bundle/src/Resources/views/login.html.twig
@@ -11,6 +11,7 @@
     <form method="post">
       <div class="tl_formbody">
         <input type="hidden" name="FORM_SUBMIT" value="tl_login">
+        <input type="hidden" name="REQUEST_TOKEN" value="{{ request_token }}">
         <h4><label for="password">{{ 'password'|trans }}</label></h4>
         <input type="password" name="password" id="password" autocomplete="off" class="tl_text" value="">
       </div>
