[Installation] Re-add the back end link (see #6).

--- a/installation-bundle/src/Resources/views/main.html.twig
+++ b/installation-bundle/src/Resources/views/main.html.twig
@@ -132,6 +132,7 @@
           <p>{{ 'installation_complete_explain'|trans }}</p>
         </div>
       </fieldset>
+      <p id="back_end"><a href="{{ path('contao_backend') }}">{{ 'back_end'|trans }}</a></p>
     {% endif %}
   {% endif %}
 {% endblock %}
